--- a/css/test015.html
+++ b/css/test015.html
@@ -24,6 +24,11 @@
       /* letter-spacing: 2.5em; */
       text-shadow: 4.5px 2.7px 2.2px gray;
     }
+    .ap {
+      background-color: pink;
+      opacity: 0.8;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
@@ -40,7 +45,7 @@
     동 백 마 닳 하 보 우 만
     동 백 마 닳 하 보 우 만
     동 백 마 닳 하 보 우 만
-    동 백 마 닳 하 보 우 만
+    동 백 마 닳 <span class="ap">하 보</span> 우 만
     동 백 마 닳 하 보 우 만
     동 백 마 닳 하 보 우 만
     동 백 마 닳 하 보 우 만
