--- a/javaclass11/MainUI.html
+++ b/javaclass11/MainUI.html
@@ -2,13 +2,17 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>아이브 팬카페 Dive에 오신 것을 환영합니다~</title>
-  <style>
-
-  </style>
+  <title>Dive into IVE!</title>
+  <link rel="stylesheet" type="text/css" href="MainUI.css">
 </head>
 <body>
-  
+<div id="container">
+  <header id="MainWelcome">
+    <h1 class="header1"><a href="MainUI.html">Welcome to IVE official Fansite - DIVE</a></h1>
+  </header>
+    
+  </div>
 </body>
 </html>
