--- a/javaclass11/MainUI.html
+++ b/javaclass11/MainUI.html
@@ -16,28 +16,28 @@
       <div class="signcontainer">
         <form>
           <div class="signIn">
-            <p>
-              <font size="3px">로그인하시면 더 많은 기능을 이용할 수 있습니다♥</font>
-            </p>
-            <div> &nbsp;&nbsp;&nbsp;&nbsp;아이디
-              <input type="text" name="mid" id="mid" placeholder="아이디를 입력하세요" maxlength="13" autofocus required />
-            </div><br/>
-            <div> &nbsp;&nbsp;&nbsp;&nbsp;비밀번호
-              <input type="password" name="pwd" id="pwd" placeholder="비밀번호를 입력하세요" maxlength="14" required />
-            </div><br/>
-            <div class="mainBtns"> &nbsp;&nbsp;&nbsp;
-              <input type="button" value="로그인"> &nbsp;&nbsp;
-              <input type="button" value="아이디/비밀번호 찾기"> &nbsp;&nbsp; 
-              <input type="button" value="회원가입"> 
+            <div class="login">
+              <p><font size="3px">로그인하시면 더 많은 기능을 이용할 수 있습니다♥</font></p>
+              <div> &nbsp;&nbsp;&nbsp;&nbsp;아이디
+                <input type="text" name="mid" id="mid" placeholder="아이디를 입력하세요" maxlength="13" autofocus required />
+              </div>
+              <div> &nbsp;&nbsp;&nbsp;&nbsp;비밀번호
+                <input type="password" name="pwd" id="pwd" placeholder="비밀번호를 입력하세요" maxlength="14" required />
+              </div>
+              <div class="mainBtns"> &nbsp;&nbsp;&nbsp;
+                <input type="button" value="로그인"> &nbsp;&nbsp;
+                <input type="button" value="아이디/비밀번호 찾기"> &nbsp;&nbsp; 
+                <input type="button" value="회원가입"> 
+              </div>
             </div>
-          </div>
+            <div class="topImages">
+              <img src="../../images/1.jpg" class="img1" />
+              <img src="../../images/2.jpg" class="img1" />
+              <img src="../../images/3.jpg" class="img1" />
+              <img src="../../images/4.jpg" class="img1" />
+            </div>
+          <!-- </div> -->
         </form>
-      </div>
-      <div class="topImages">
-        <img src="../../images/1.jpg" class="img1"/>
-        <img src="../../images/2.jpg" class="img2" />
-        <img src="../../images/3.jpg" class="img3" />
-        <img src="../../images/4.jpg" class="img4" />
       </div>
     </article>  
   </div>
