--- a/JSP_project/javaclass11/javaclass11/MainUI.html
+++ b/JSP_project/javaclass11/javaclass11/MainUI.html
@@ -5,7 +5,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dive into IVE!</title>
-  <link rel="stylesheet" type="text/css" href="MainUI.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
   <div id="container">
@@ -36,7 +39,7 @@
               <img src="../../images/3.jpg" class="img1" />
               <img src="../../images/4.jpg" class="img1" />
             </div>
-          <!-- </div> -->
+          </div>
         </form>
       </div>
     </article>  
