--- a/JSP_project/javaclass11/javaclass11/MainUI.html
+++ b/JSP_project/javaclass11/javaclass11/MainUI.html
@@ -5,44 +5,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dive into IVE!</title>
+  <link rel="stylesheet" href="MainUI.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 </head>
 <body>
   <div id="container">
     <header id="MainWelcome">
-      <h2 class="header1">&nbsp;&nbsp;Welcome to IVE official Fansite - DIVE</h2>
+      <h2 class="header1 mt-2 ml-2">&nbsp;&nbsp;Welcome to IVE official Fansite - DIVE<img src="../../images/7.jpg" width="1000px" height="100px" /></h2>
     </header>
-    <article>
-      <div class="signcontainer">
-        <form>
-          <div class="signIn">
-            <div class="login">
-              <p><font size="3px">로그인하시면 더 많은 기능을 이용할 수 있습니다♥</font></p>
-              <div> &nbsp;&nbsp;&nbsp;&nbsp;아이디
-                <input type="text" name="mid" id="mid" placeholder="아이디를 입력하세요" maxlength="13" autofocus required />
-              </div>
-              <div> &nbsp;&nbsp;&nbsp;&nbsp;비밀번호
-                <input type="password" name="pwd" id="pwd" placeholder="비밀번호를 입력하세요" maxlength="14" required />
-              </div>
-              <div class="mainBtns"> &nbsp;&nbsp;&nbsp;
-                <input type="button" value="로그인"> &nbsp;&nbsp;
-                <input type="button" value="아이디/비밀번호 찾기"> &nbsp;&nbsp; 
-                <input type="button" value="회원가입"> 
-              </div>
-            </div>
-            <div class="topImages">
-              <img src="../../images/1.jpg" class="img1" />
-              <img src="../../images/2.jpg" class="img1" />
-              <img src="../../images/3.jpg" class="img1" />
-              <img src="../../images/4.jpg" class="img1" />
-            </div>
-          </div>
-        </form>
-      </div>
-    </article>  
   </div>
 </body>
 </html>
