--- a/JSP_project/javaclass11/javaclass11/MainUI.html
+++ b/JSP_project/javaclass11/javaclass11/MainUI.html
@@ -17,7 +17,7 @@
 <body>
   <div id="container">
     <header id="MainWelcome">
-      <h2 class="header1 mt-2 ml-2">&nbsp;&nbsp;Welcome to IVE official Fansite - DIVE<img src="../../images/7.jpg" width="1000px" height="100px" /></h2>
+      <h2 class="header1 mt-2 ml-2">&nbsp;&nbsp;Welcome to IVE official Fansite - DIVE</h2>
     </header>
   </div>
 </body>
